# mro-data

./: .gitignore  hello.py  pyproject.toml
data/20250704/: ecam-0001.fits  ecam-0002.fits  ecam-0003.fits  ecam-0004.fits  ecam-0005.fits  ecam-0006.fits  ecam-0007.fits  ecam-0008.fits  ecam-0009.fits  ecam-0010.fits  ecam-0011.fits  ecam-0012.fits  ecam-0013.fits  ecam-0014.fits  ecam-0015.fits  ecam-0016.fits  ecam-0017.fits  ecam-0018.fits  ecam-0019.fits  ecam-0020.fits  ecam-0021.fits  ecam-0022.fits  ecam-0023.fits  ecam-0024.fits  ecam-0025.fits  ecam-0026.fits  ecam-0027.fits  ecam-0028.fits  ecam-0029.fits  ecam-0030.fits  ecam-0031.fits  ecam-0032.fits  ecam-0033.fits  ecam-0034.fits  ecam-0035.fits  ecam-0036.fits  ecam-0037.fits  ecam-0038.fits  ecam-0039.fits  ecam-0040.fits  (+83 more)
scripts/: README.md  README_API.md  download_fits.py  download_fits_v2.py  example_api_usage.py  example_usage.py  list_available_days.py  list_available_days_v2.py  mro_api.py  mro_display.py  sync_data.py
