[project]
name = "mro-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.1.0",
    "beautifulsoup4>=4.12.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "requests>=2.31.0",
    "rich>=14.0.0",
    "scipy>=1.16.0",
]
